<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7BBDBD">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7BBDBD"
        android:fillViewport="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#7BBDBD"
            android:visibility="visible"
            tools:context=".DayMood">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="194dp"
                android:layout_height="23dp"
                android:layout_marginStart="177dp"
                android:layout_marginTop="41dp"
                android:layout_marginEnd="186dp"
                android:indeterminate="false"
                android:max="10"
                android:progress="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.475"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/moodRatingText" />

            <TextView
                android:id="@+id/moodRatingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="165dp"
                android:layout_marginTop="128dp"
                android:layout_marginEnd="166dp"
                android:text="@string/mood_rating_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/glassesDrunk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="133dp"
                android:layout_marginTop="96dp"
                android:layout_marginEnd="134dp"
                android:text="@string/glasses_drunk_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />

            <TextView
                android:id="@+id/sleepText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="96dp"
                android:layout_marginTop="86dp"
                android:text="@string/time_slept"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/glassesDrunk" />

            <TextView
                android:id="@+id/weatherForDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="158dp"
                android:layout_marginTop="92dp"
                android:text="@string/weather_day_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sleepText" />

            <TextView
                android:id="@+id/journalDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="152dp"
                android:layout_marginTop="88dp"
                android:layout_marginEnd="154dp"
                android:gravity="center"
                android:text="@string/Journal_entry"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weatherForDay" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="104dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/journalDay"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3E8A8A"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_alignParentTop="true"
        app:title="Day Review"
        app:titleCentered="true" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:background="#3E8A8A"
        app:itemIconTint="@color/white"
        app:itemTextColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        app:menu="@menu/nav_bar" />


</RelativeLayout>